--- a/manager/webpack/src/index.html
+++ b/manager/webpack/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>ztp-manager</title>
+    <title>kstm ZTP</title>
   </head>
   <body>
     <div id="app"></div>
